Fix slides being too big to fit on mobile

--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -22,7 +22,7 @@
 .slide {
   height: 100%;
   display: inline-block;
-  padding: 30px;
+  padding: 10px;
   scroll-snap-align: start;
 }
 
